--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,24 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #000000;
+}
+
+/* NOTE: variables are located and set in the layout.tsx file in the app directory */
+body {
+  font-family: var(--font-primary); /* Apply Montserrat to all text */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-special); /* Apply Playfair Display to headers */
+}
+
+main {
+  background-color: #eae2d9;
+  min-height: 86vh; /* <---- TODO: Possibly delete this */
 }
