--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,3 @@
-.main {
-  color: #333;
-  margin: 0 auto;
-  background-color: #eae2d9;
-}
-
 .overlayText {
   position: absolute;
   top: 70%;
@@ -11,16 +5,7 @@
   transform: translate(-50%, -50%);
   color: #fff;
   font-size: 3rem;
-  z-index: 2; /* Ensure it's above the video and the tint */
-}
-
-.nav {
-  display: flex;
-  gap: 20px;
-}
-
-.nav:hover {
-  cursor: pointer;
+  z-index: 2; /* Ensure it's above the picture and the tint */
 }
 
 .headerContainer {
@@ -35,9 +20,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  /* TODO ask Meghan which she prefers */
-  /*background-color: rgba(0, 0, 0, 0.2);*/
-  background-color: rgba(129, 75, 3, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .parallaxBackground {
@@ -45,85 +28,26 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh; /* Adjust as needed */
-  background-image: url('/home_background_image.JPG');
+  height: 100vh;
+  background-image: url("/home_background_image.JPG");
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* Key property for parallax */
   overflow: hidden;
 }
 
-
-.video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.header,
-.sticky {
+.navContainer {
   display: flex;
   justify-content: center;
-  padding: 20px 0;
   width: 100%;
-  /*background: transparent;*/
   transition: background-color 2s;
-  position: absolute; /* Start as absolute */
-  top: 94vh; /* Positioned at the bottom of the video */
+  position: absolute;
+  top: 94vh;
   z-index: 10;
-  background-color: #eae2d9; /* Solid color on sticky */
+  background-color: #eae2d9;
 }
 
-.sticky {
-  position: fixed; /* Sticky behavior */
-  top: 0; /* Stick to the top */
-  background-color: #fff; /* Solid color on sticky */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-.hero,
-.services,
-.testimonials,
-.footer {
+.hero {
   text-align: center;
   padding: 40px 20px;
-}
-
-.ctaButton {
-  background-color: #0070f3;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.ctaButton:hover {
-  background-color: #0056b3;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-}
-
-.card {
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  padding: 20px;
-}
-
-.card:hover {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.footer {
-  border-top: 1px solid #eaeaea;
-  margin-top: 20px;
 }
