--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,17 +1,42 @@
-.overlayText {
-  position: absolute;
-  top: 70%;
-  left: 35%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 3rem;
-  z-index: 2; /* Ensure it's above the picture and the tint */
-}
-
 .headerContainer {
   position: relative;
   height: 100vh; /* Adjusted to leave room for navbar */
   width: 100%;
+}
+
+.parallaxBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url("/home_background_image.JPG");
+  background-size: cover;
+  background-position: left;
+  background-attachment: fixed; /* Key property for parallax */
+  overflow: hidden;
+}
+
+.overlayText {
+  position: absolute;
+  top: 5%;
+  left: 3%;
+  transform: none;
+  color: #fff;
+  font-size: 4rem;
+  z-index: 3;
+  width: auto;
+}
+
+.overlayText2 {
+  position: absolute;
+  top: 80%;
+  left: 3%;
+  transform: none;
+  color: #fff;
+  font-size: 2.5rem;
+  z-index: 2;
+  width: auto;
 }
 
 .imageTint {
@@ -23,26 +48,13 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.parallaxBackground {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-image: url("/home_background_image.JPG");
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed; /* Key property for parallax */
-  overflow: hidden;
-}
-
 .navContainer {
   display: flex;
   justify-content: center;
   width: 100%;
   transition: background-color 2s;
   position: absolute;
-  top: 94vh;
+  top: 94%;
   z-index: 10;
   background-color: #eae2d9;
 }
@@ -51,3 +63,27 @@
   text-align: center;
   padding: 40px 20px;
 }
+
+@media (max-width: 768px) {
+  .parallaxBackground {
+    background-position: center;
+  }
+  .overlayText {
+    font-size: 2.5rem;
+  }
+  .overlayText2 {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .overlayText {
+    font-size: 2rem;
+  }
+
+  .overlayText2 {
+    font-size: 1.5rem;
+  }
+
+}
+
