--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,7 +12,7 @@
   height: 100vh;
   background-image: url("/home_background_image.JPG");
   background-size: cover;
-  background-position: left;
+  background-position: 40%;
   background-attachment: fixed; /* Key property for parallax */
   overflow: hidden;
 }
@@ -30,7 +30,7 @@
 
 .overlayText2 {
   position: absolute;
-  top: 80%;
+  top: calc(100vh - 200px); /* Hard coded 200px to get the text above the Nav component */
   left: 3%;
   transform: none;
   color: #fff;
@@ -44,7 +44,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -54,7 +54,9 @@
   width: 100%;
   transition: background-color 2s;
   position: absolute;
-  top: 94%;
+  top: calc(
+    100vh - 70px
+  ); /* The 70px is the height of the nav element in the Nav component */
   z-index: 10;
   background-color: #eae2d9;
 }
@@ -65,14 +67,28 @@
 }
 
 @media (max-width: 768px) {
+  .headerContainer {
+    height: 100vh;
+  }
+
   .parallaxBackground {
     background-position: center;
   }
+
   .overlayText {
     font-size: 2.5rem;
   }
+
   .overlayText2 {
     font-size: 2rem;
+    top: 90vh
+  }
+
+  .navContainer {
+    position: absolute;
+    justify-content: right;
+    top: 0;
+    background-color: transparent;
   }
 }
 
@@ -84,6 +100,4 @@
   .overlayText2 {
     font-size: 1.5rem;
   }
-
 }
-
