--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,30 +1,32 @@
+/*:root {
+  --font-size-base: 16px;
+  --color-primary: #99bfe3;
+  --color-secondary: #4b8bd0;
+  --color-tertiary: #2b547a;
+}*/
+:root {
+  --font-size-base: 16px;
+  --color-primary: #eae2d9;
+  --color-secondary: #eac1b1;
+  --color-tertiary: #cc8e75;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-html,
+html {
+  font-size: var(--font-size-base);
+}
+
+/* NOTE: some variables are located and set in the layout.tsx file in the app directory */
 body {
   max-width: 100vw;
   overflow-x: hidden;
   background-color: #000000;
-}
-
-/*:root {
-  --color-primary: #99bfe3;
-  --color-secondary: #4b8bd0;
-  --color-tertiary: #2b547a;
-}*/
-:root {
-  --color-primary: #eae2d9;
-  --color-secondary: #eac1b1;
-  --color-tertiary: #cc8e75;
-}
-
-/* NOTE: variables are located and set in the layout.tsx file in the app directory */
-body {
-  font-family: var(--font-primary); /* Apply Montserrat to all text */
+  font-family: var(--font-primary);
 }
 
 h1,
@@ -40,4 +42,47 @@ button {
 main {
   background-color: var(--color-primary);
   min-height: 95vh; /* <---- TODO: Possibly delete this */
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1.2rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
 }
