--- a/styles/ServiceCard.module.css
+++ b/styles/ServiceCard.module.css
@@ -1,5 +1,28 @@
+@keyframes rotateBorderColor {
+  0% {
+    border-color: var(--color-quaternary);
+  }
+  20% {
+    border-color: var(--color-tertiary);
+  }
+  40% {
+    border-color: var(--color-secondary);
+  }
+  60% {
+    border-color: var(--color-secondary);
+  }
+  80% {
+    border-color: var(--color-tertiary);
+  }
+  100% {
+    border-color: var(--color-quaternary);
+  }
+}
+
 .recommended {
   border: 2px solid var(--color-tertiary);
+  position: relative;
+  animation: rotateBorderColor 4s linear infinite;
 }
 
 .recommendedLabel {
@@ -23,7 +46,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
-  height: 100%;
+  min-height: 100%;
 }
 
 .content {
@@ -33,20 +56,17 @@
 }
 
 .title {
-  /*font-size: 2em;*/
   color: #333;
   margin-bottom: 10px;
 }
 
 .description {
-  /*font-size: 1.2em;*/
   color: #666;
   flex-grow: 1;
   margin-bottom: 20px;
 }
 
 .price {
-  /*font-size: 1.2em;*/
   color: #333;
   margin-bottom: 20px;
 }
@@ -59,7 +79,6 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
-  /*font-size: 1.2rem;*/
 }
 
 .button:hover {
