--- a/styles/ServiceCard.module.css
+++ b/styles/ServiceCard.module.css
@@ -28,9 +28,10 @@
   background: linear-gradient(
     to right,
     transparent 0%,
-    var(--color-tertiary) 100%
+    var(--color-tertiary) 50%,
+    transparent 100%
   );
-  animation: moveLine 24s ease-in-out infinite;
+  animation: moveLine 20s ease-in-out infinite;
 }
 
 /* ------------------------------------------------- */
@@ -57,7 +58,7 @@
 }
 
 .recommended {
-  border: 2px solid var(--color-tertiary);
+  border: 4px solid var(--color-tertiary);
   position: relative;
   animation: rotateBorderColor 4s linear infinite;
 }
