--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,28 +1,94 @@
 .footer {
-  background-color: #f0f0f0; /* Light grey background */
-  color: #333; /* Dark text color for contrast */
-  text-align: center; /* Center-aligns the text */
-  padding: 20px; /* Padding around the content */
+  position: relative;
+  background: linear-gradient(
+    to bottom,
+    var(--color-primary) 5%,
+    var(--color-secondary) 100%
+  );
+  padding: 20px;
 }
 
-.socialLinks {
+/* This is the border at the top of footer */
+.footer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px; /* Height of the top border */
+  background: linear-gradient(
+    to right,
+    var(--color-primary) 15%,
+    var(--color-quaternary) 100%
+  );
+}
+
+.footerContent {
   display: flex;
-  justify-content: center; /* Center the social links horizontally */
-  list-style: none; /* Removes default list styling */
-  padding: 0; /* Removes default padding */
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
 }
 
-.socialLink {
-  margin: 0 10px; /* Space between social links */
+.footerLeft {
+  flex: 1;
+  max-width: 50%;
 }
 
-.socialLink a {
-  display: inline-block;
-  color: #333; /* Social link color */
-  text-decoration: none; /* Removes underline */
-  transition: color 0.3s ease; /* Smooth color transition on hover */
+.footerLeft h4 {
+  margin-bottom: 10px;
 }
 
-.socialLink a:hover {
-  color: #0070f3; /* Color change on hover */
+.footerLeft p {
+  margin: 0;
+}
+
+.footerLeft a {
+  color: #333;
+  text-decoration: none;
+}
+
+.emergency {
+  color: rgb(195, 0, 0);
+}
+
+.emergency a {
+  color: rgb(195, 0, 0);
+}
+
+.nonEmergency {
+  padding-top: 1rem;
+}
+
+.copyright {
+  margin-top: 1rem;
+}
+
+.footerRight {
+  flex: 1;
+  max-width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+@media (max-width: 768px) {
+  .footerContent {
+    flex-direction: column;
+  }
+
+  .footerLeft,
+  .footerRight {
+    max-width: 100%;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .footer {
+    background-color: #000;
+  }
+
+  .nonEmergency a {
+    color: #ffffff;
+  }
 }
