--- a/styles/FAQCard.module.css
+++ b/styles/FAQCard.module.css
@@ -1,10 +1,9 @@
 .cardClosed {
-  /*position: relative;*/
-  /*background: #fff;*/
   border-radius: 4px;
   margin: 10px;
   display: flex;
   min-height: 100%;
+  cursor: pointer;
 }
 
 .cardOpen {
@@ -15,18 +14,18 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   min-height: 100%;
+  cursor: pointer;
 }
 
 .buttonContainer {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    width: 5%;
-
+  display: flex;
+  padding: 20px;
+  width: 5%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .questionButton {
-  margin: auto;
   width: fit-content;
   height: fit-content;
   padding: 10px;
@@ -54,4 +53,10 @@
   color: #666;
   flex-grow: 1;
   margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  .buttonContainer {
+    margin: 0 0 0 15px;
+  }
 }
