--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,36 +1,37 @@
 .nav {
-  background: var(--color-primary); /* Adjust background color as needed */
-  padding: 20px; /* Adjust padding as needed */
+  background: var(--color-primary);
+  padding: 20px;
   width: 100%;
   height: 70px;
   z-index: 999;
 }
 
 .navList {
-  list-style: none; /* Removes default list styling */
-  display: flex; /* Displays list items in a row */
-  justify-content: space-evenly; /* Center items horizontally */
-  /*justify-content:space-around;*/
-  /*justify-content:space-evenly;*/
-  /*justify-content: space-between;*/
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 0; /* Removes default padding */
+  padding: 0;
 }
 
 .navItem {
-  margin: 0 15px; /* Adjust space between items */
+  margin: 0 15px;
   font-size: 1.3rem;
 }
 
 .navItem a {
-  text-decoration: none; /* Removes underline from links */
-  color: black; /* Adjust link color as needed */
-  font-weight: bold; /* Makes the font bold */
-  transition: color 0.3s ease; /* Smooth transition for hover effect */
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  transition: color 0.3s ease;
 }
 
 .navItem a:hover {
-  color: var(--color-tertiary); /* Color change on hover */
+  color: var(--color-tertiary);
+}
+
+.activeNavItem a {
+  color: var(--color-tertiary);
 }
 
 .hamburger {
@@ -64,40 +65,40 @@
 
   .hamburger {
     display: flex;
-    position: absolute; /* Changed to absolute for better control */
-    top: 15px; /* Adjust as needed */
-    right: 15px; /* Adjust as needed */
-    z-index: 20; /* Ensure hamburger is above the menu */
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 20;
   }
 
   .navList {
-    position: fixed; /* Use fixed to overlay on top of the page content */
+    position: fixed;
     top: 60px;
-    left: 50%; /* Center the menu */
+    left: 50%;
     width: 50%;
-    height: 500px; /* Take full viewport height */
+    height: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Center items vertically */
-    align-items: center; /* Center items horizontally */
+    justify-content: center;
+    align-items: center;
     background-color: var(--color-primary);
-    border-top-left-radius: 15px; /* Adjust if needed */
-    border-bottom-left-radius: 15px; /* Adjust if needed */
-    opacity: 0; /* Start fully transparent */
-    visibility: hidden; /* Hide by default */
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    opacity: 0;
+    visibility: hidden;
     transition:
       opacity 0.3s ease,
-      visibility 0.3s ease; /* Smooth transition for both opacity and visibility */
-    z-index: 10; /* Ensure menu is below the hamburger button */
-    border: 2px solid #000000; /* Add a border for better visibility */
+      visibility 0.3s ease;
+    z-index: 10;
+    border: 2px solid #000000;
   }
 
   .menuVisible {
-    opacity: 1; /* Fully visible */
-    visibility: visible; /* Show the menu */
+    opacity: 1;
+    visibility: visible;
   }
 
   .navItem {
-    margin: 20px 0; /* Adjust spacing for mobile view */
+    margin: 20px 0;
   }
 }
