--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,14 @@ h4 {
   font-size: 1.5rem;
 }
 
+h5 {
+  font-size: 1.2rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
 p {
   font-size: 1.2rem;
   line-height: 1.5;
