--- a/styles/ServiceCard.module.css
+++ b/styles/ServiceCard.module.css
@@ -115,7 +115,6 @@
 
 .price {
   color: #333;
-  margin-bottom: 20px;
 }
 
 .button {
@@ -126,6 +125,10 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
+  margin: auto;
+  width: 100%;
+  text-align: center;
+  text-decoration: none;
 }
 
 .button:hover {
