--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,6 +75,13 @@ p {
   line-height: 1.5;
 }
 
+a,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none; /* Ensure all anchor states have no text decoration */
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 2.5rem;
