--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -221,3 +221,28 @@
     font-size: 2rem;
   }
 }
+
+@media (max-height: 500px) {
+  .parallaxBackground {
+    background-position: center;
+    background-attachment: local;
+  }
+
+  .overlayText h1 {
+    font-size: 4rem;
+  }
+
+  .overlayText2 {
+    top: calc(100vh - 150px);
+  }
+
+  .overlayText2 h4 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-height: 300px) {
+  .overlayText2 {
+    display: none;
+  }
+}
