--- a/styles/Status.module.css
+++ b/styles/Status.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center; /* Ensures vertical alignment */
+    padding-left: 10px;
 }
 
 .status svg {
