--- a/styles/Status.module.css
+++ b/styles/Status.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: row;
   align-items: center; /* Ensures vertical alignment */
-  padding-left: 10px;
+  justify-content: center;
+  padding: 10px 0 10px 10px;
 }
 
 .status svg {
