--- a/styles/ServiceCard.module.css
+++ b/styles/ServiceCard.module.css
@@ -88,6 +88,13 @@
   display: flex;
   justify-content: space-between;
   min-height: 100%;
+  transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+   background: #ffe3c0;
+  transition: 0.3s;
 }
 
 .container {
