--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -17,8 +17,9 @@
     border-radius: 5px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     position: relative;
-    width: 90%;
-    max-width: 500px;
+    height: 70%;
+    width: 70%;
+    max-width: 800px;
 }
 
 .closeButton {
