--- a/styles/AppointmentModal.module.css
+++ b/styles/AppointmentModal.module.css
@@ -51,4 +51,12 @@
     text-decoration: none;
 }
 
+.input {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    padding: 8px;
+    font-size: 16px;
+}
+
 /*TODO: update this for mobile*/
