--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -28,6 +28,7 @@
     right: 10px;
     background: none;
     border: none;
-    font-size: 1.5rem;
+    font-size: 2rem;
     cursor: pointer;
+    width: 30px;
 }
