--- a/styles/AppointmentModal.module.css
+++ b/styles/AppointmentModal.module.css
@@ -1,62 +1,71 @@
 .modal {
-    height: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
 .calendar {
-    border: none;
-    box-shadow: 0 32px 64px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    padding: 10px;
-    margin: 10px;
-    width: 100%;
-    max-width: 600px;
+  border: none;
+  box-shadow: 0 32px 64px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 10px;
+  margin: 10px;
+  width: 100%;
+  max-width: 600px;
 }
 
 .timePicker {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .timePicker label {
-    font-weight: bold;
-    margin-bottom: 10px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .timeSelect {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    font-size: 16px;
-    width: 100%;
-    max-width: 200px;
-    text-align: center;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  font-size: 16px;
+  width: 100%;
+  max-width: 200px;
+  text-align: center;
 }
 
 .button {
-    padding: 10px 20px;
-    background-color: var(--color-primary);
-    color: black;
-    border: 1px solid #000000;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: transform 0.3s;
-    text-align: center;
-    text-decoration: none;
+  padding: 10px 20px;
+  background-color: var(--color-primary);
+  color: black;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: transform 0.3s;
+  text-align: center;
+  text-decoration: none;
 }
 
 .input {
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-    padding: 8px;
-    font-size: 16px;
+  display: block;
+  width: 100%;
+  margin: 10px 0;
+  padding: 8px;
+  font-size: 16px;
+}
+
+.weekend {
+  color: black;
+}
+
+.selectedDate {
+  background: #006edc;
+  color: white;
 }
 
 /*TODO: update this for mobile*/
